overlap header text on mobile m fixed

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -57,13 +57,13 @@
         height: 140px;
       }
       @include respond(mobile-lg) {
-        font-size: 75px;
-        height: 140px;
+        font-size: 65px;
+        height: 130px;
       }
 
       @include respond(mobile-m) {
-        font-size: 63px;
-        height: 130px;
+        font-size: 60px;
+        height: 120px;
       }
 
       @include respond(mobile-s) {
